@@ -15,26 +15,65 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+set -eo pipefail
 
-BIN_DIR=$(dirname $0)
-DOLPHINSCHEDULER_HOME=${DOLPHINSCHEDULER_HOME:-$(cd $BIN_DIR/..; pwd)}
+BIN_DIR=$(dirname $(readlink -f "$0"))
+DOLPHINSCHEDULER_HOME=$(cd ${BIN_DIR}/../..;pwd)
+STANDALONE_HOME=$(cd ${BIN_DIR}/..;pwd)
 
 export DATABASE=${DATABASE:-h2}
-source "$DOLPHINSCHEDULER_HOME/conf/dolphinscheduler_env.sh"
+source "$STANDALONE_HOME/conf/dolphinscheduler_env.sh"
 
-JAVA_OPTS=${JAVA_OPTS:-"-server -Duser.timezone=${SPRING_JACKSON_TIME_ZONE} -Xms1g -Xmx1g -Xmn512m -XX:+PrintGCDetails -Xloggc:gc.log -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=dump.hprof"}
+JVM_ARGS_ENV_FILE=${STANDALONE_HOME}/bin/jvm_args_env.sh
+JVM_ARGS="-server"
 
-if [[ "$DOCKER" == "true" ]]; then
-  JAVA_OPTS="${JAVA_OPTS} -XX:-UseContainerSupport"
+if [ -f $JVM_ARGS_ENV_FILE ]; then
+  while read line
+  do
+      if [[ "$line" == -* ]]; then
+            JVM_ARGS="${JVM_ARGS} $line"
+      fi
+  done < $JVM_ARGS_ENV_FILE
 fi
 
+JAVA_OPTS=${JAVA_OPTS:-"${JVM_ARGS}"}
+
+if [[ "$DOCKER" == "true" ]]; then
+  JAVA_OPTS="${JAVA_OPTS} -XX:-UseContainerSupport -DDOCKER=true"
+fi
+
+echo "JAVA_HOME=${JAVA_HOME}"
+echo "JAVA_OPTS=${JAVA_OPTS}"
+
+MODULES_PATH=(
+api-server
+master-server
+worker-server
+alert-server
+)
+
 CP=""
-for d in $DOLPHINSCHEDULER_HOME/libs/*; do
-  for f in $d/*.jar; do
-    CP=$CP:$f
-  done
+for module in ${MODULES_PATH[@]}; do
+  CP=$CP:"$DOLPHINSCHEDULER_HOME/$module/libs/*"
 done
 
-java $JAVA_OPTS \
-  -cp "$DOLPHINSCHEDULER_HOME/conf":"$CP" \
+PLUGINS_PATH=(
+alert-plugins
+datasource-plugins
+storage-plugins
+task-plugins
+)
+
+for plugin in ${PLUGINS_PATH[@]}; do
+  if [ -d "$DOLPHINSCHEDULER_HOME/plugins/$plugin" ]; then
+    CP=$CP:"$DOLPHINSCHEDULER_HOME/plugins/$plugin/*"
+  fi
+done
+
+for jar in $(find $STANDALONE_HOME/libs/* -name "*.jar"); do
+  CP=$CP:"$jar"
+done
+
+$JAVA_HOME/bin/java $JAVA_OPTS \
+  -cp "$STANDALONE_HOME/conf""$CP" \
   org.apache.dolphinscheduler.StandaloneServer
